src/tests/snapshots/tera__tests__rendering__rendering_errors@bad_in_container.txt.snap
---
source: src/tests/rendering.rs
expression: "&err"
input_file: src/tests/rendering_inputs/errors/bad_in_container.txt
---
 Rendering error --> ["bad_in_container.txt":1:10]
  |
1 | {{ 'a' in 1 }}
  |           ^---
  = `in` cannot be used on a container of type `i64`. It can only be used on arrays, strings and map/structs
