src/tests/snapshots/tera__tests__rendering__rendering_errors@invalid_array_idx.txt.snap
---
source: src/tests/rendering.rs
expression: "&err"
input_file: src/tests/rendering_inputs/errors/invalid_array_idx.txt
---
 Rendering error --> ["invalid_array_idx.txt":1:11]
  |
1 | {{ vectors[1.1] }}
  |            ^---
  = Array indices can only be integers, not `f64`.
