src/tests/snapshots/tera__tests__rendering__rendering_errors@invalid_map_key_access.html.snap
---
source: src/tests/rendering.rs
expression: "&err"
input_file: src/tests/rendering_inputs/errors/invalid_map_key_access.html
---
 Rendering error --> ["invalid_map_key_access.html":1:11]
  |
1 | {{ product[weights] }}
  |            ^---
  = `undefined` cannot be a key of a map/struct: only be integers, bool or strings are allowed
