src/tests/snapshots/tera__tests__rendering__rendering_errors@invalid_map_key_access.txt.snap
---
source: src/tests/rendering.rs
expression: "&err"
input_file: src/tests/rendering_inputs/errors/invalid_map_key_access.txt
---
 Rendering error --> ["invalid_map_key_access.txt":1:11]
  |
1 | {{ product[weights] }}
  |            ^---
  = `undefined` cannot be a key of a map/struct: only be integers, bool or strings are allowed
