src/tests/snapshots/tera__tests__rendering__rendering_errors@invalid_math_op.html.snap
---
source: src/tests/rendering.rs
expression: "&err"
input_file: src/tests/rendering_inputs/errors/invalid_math_op.html
---
 Rendering error --> ["invalid_math_op.html":1:3]
  |
1 | {{ username + 1 }}
  |    ^---
  = Math operations can only be done on numbers, found `undefined`
