src/tests/snapshots/tera__tests__rendering__rendering_errors@iterate_on_non_array.html.snap
---
source: src/tests/rendering.rs
expression: "&err"
input_file: src/tests/rendering_inputs/errors/iterate_on_non_array.html
---
 Rendering error --> ["iterate_on_non_array.html":1:12]
  |
1 | {% for i in friend_reviewed %}
  |             ^---
  = Iteration not possible on type `undefined`
